<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_white_alpha90_rounded"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_tourist" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_category"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tourist"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/ib_category_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/ic_info" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_category_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tourist_description" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_drop_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_spin_arrow_down" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_card_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_subscription_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:padding="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_switch_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_time"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <ImageButton
                    android:id="@+id/ib_info_switch_one"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorWhite"
                    app:srcCompat="@drawable/ic_info" />
            </LinearLayout>

            <Switch
                android:id="@+id/sw_subscription_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_black_alpha30_rounded"
                android:buttonTint="@color/colorWhite" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_switch_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <ImageButton
                    android:id="@+id/ib_info_switch_monthly"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:tint="@color/colorWhite"
                    app:srcCompat="@drawable/ic_info" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_plan_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_subscription_type"
            tools:listitem="@layout/item_plan_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>